5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1756_1580.log
== TEST (2019-05-22 22:21:39) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
m = 0 #media 
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(i)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
		elif 
	i = i + 1
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
File "XXXX", line 24
    elif 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:21:45) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
m = 0 #media 
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(i)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:22:53) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
m = 0 #media 
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(i)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:23:46) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
m = 0 #media 
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(i)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:29:36) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(i)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:31:42) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
	elif(v[x] > -1):  #presentes
		p = p + 1
		if (v[x] >= 6):
			a = a + 1
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
print(f)
print(p)
print(a)
print(r)
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:32:22) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
	elif(v[x] > -1):  #presentes
		p = p + 1
		if (v[x] >= 6):
			a = a + 1
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
print(f)
print(p)
print(a)
print(r)
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 22:34:29) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
	elif(v[x] > -1):  #presentes
		p = p + 1
		if (v[x] >= 6):
			a = a + 1
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
print(f)
print(p)
print(a)
print(r)
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- EXECUTION TIME:
0.518287
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
12
12
0
3.5
]
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
11
0
0
0
1.0
]
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
11
0
11
6.39
]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:34:32) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
	elif(v[x] > -1):  #presentes
		p = p + 1
		if (v[x] >= 6):
			a = a + 1
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
print(f)
print(p)
print(a)
print(r)
m = sum(v)/size(v)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:36:26) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
	elif(v[x] > -1):  #presentes
		p = p + 1
		if (v[x] >= 6):
			a = a + 1
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
print(f)
print(p)
print(a)
print(r)
m = sum(p)/size(p)
print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:38:32) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
	m = sum(p)/size(p)
	print(round(m, 2))
print(max(n))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:39:57) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
	i = i + 1
		m = sum(p)/size(p)
		print(round(m, 2))
		print(max(n))
		
		
-- ERROR:
File "XXXX", line 24
    m = sum(p)/size(p)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:40:19) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
		m = sum(p)/size(p)
		print(round(m, 2))
		print(max(n))
	i = i + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:54:41) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
		m = sum(p)/size(p)
		print(round(m, 2))
		print(max(n))
	i = i + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:02:04) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
		m = sum(p)/size(p)
		print(round(m, 2))
		print(max(n))
	i = i + 1
	x = x + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:03:28) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
		m = sum(p)/size(p)
		print(round(m, 2))
		print(max(n))
	i = i + 1
	x = x + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:08:43) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = input("nomes: ")
x = 0 #posicao do vetor
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[x] == -1):   #faltas
		f = f + 1
		print(f)
	elif(v[x] > -1):  #presentes
		p = p + 1
		print(p)
		if (v[x] >= 6):
			a = a + 1
			print(a)
		elif (v[x] < 6):
			r = r + 1
			print(r)
		m = sum(p)/size(p)
		print(round(m, 2))
		print(max(n[x]))
	i = i + 1
	x = x + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:30:23) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (votos[i] != max(votos)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:31:09) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (votos[i] != max(votos)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:32:43) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (votos[i] != max(votos)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:34:45) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (v[i] != max(v)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 23:39:49) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (votos[i] != max(votos)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- EXECUTION TIME:
563.149
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
task 783be0139a30f6267dc6132f4798e165729b79fd05bf9f07697effa1c5312cf8 not found: not found
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 23:39:49) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (v[i] != max(v)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- EXECUTION TIME:
300.219
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 23:39:49) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (votos[i] != max(votos)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- EXECUTION TIME:
558.288
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 23:39:49) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (v[i] != max(v)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- EXECUTION TIME:
302.464
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:42:18) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
a = 0 #aprovados
p = 0 #presentes
r = 0 #reprovados
while (i < size(v)):
	if(v[i] == -1):   #faltas
		f = f + 1
	elif(v[i] > -1):  #presentes
		p = p + 1
		if (v[i] >= 6):
			a = a + 1
			v1 = v1 + v[i]
		elif (v[i] >= 0 and v[i] < 6):
			r = r + 1
			v2 = v2 + v[i]
		i = i + 1
i = 0
while (v[i] != max(v)):
	x = x + 1
print(f)
print(p)
print(a)
print(round(((v1 + v2)/p), 2))
print(l[i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:06:20) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes

while (v[i] >= 0 and v[i] <= 10):
	if (v[i] >= 6):
		v1 = v1 + 1
	elif (v[i] < 6):
		v2 = v2 + 1
	p = p + 1 
	i = i + 1
if (v[i] == -1):
	f = f + 1
print(f)
print(v1)
print(v2)
print(sum(v)/size(v))

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:35:30) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes

while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
		elif (v[i] < 6):
			v2 = v2 + 1
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1


print(f)
print(v1)
print(v2)
print()

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:38:50) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2),2)

		
	
		
-- ERROR:
File "XXXX", line 31
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:39:18) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1

print(f)
print(v1)
print(v2)
print(

		
	
		
-- ERROR:
File "XXXX", line 31
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:39:30) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1

print(f)
print(v1)
print(v2)


		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:40:36) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:50:17) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (i != max(v)):
	i = i + 1
nome = n[i]
print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(nome)

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:50:32) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (i != max(v)):
	i = i + 1
nome = n[i]
print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(nome)

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:51:27) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (i != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:51:38) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (i != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:52:09) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:52:17) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:52:24) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- EXECUTION TIME:
2.49139
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:02:02) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (i != max(v)):
	i = i + 1
nome = n[i]
print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(nome)

		
	
		
-- EXECUTION TIME:
0.371328
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
J
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:03:01) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (i != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- EXECUTION TIME:
1.15059
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
J
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:27:25) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	
		
-- EXECUTION TIME:
0.517894
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
